# speech-to-text

./: LICENSE  README.md  Speech-to-Text Desktop Application Plan.md  live_transcription.py  pyproject.toml  record_audio.html  record_then_transcribe.py  recorder.py  speech-to-text.spec  systray.py
src/: api.py  gui.py  main.py  recorder.py  system_tray_icon.py  transcriber.py
